@@ -20,10 +20,11 @@ block:
 		log DEBUG No2
 list rrd
 list rrd t tt ttt
+wait for 1.1
 set rrd 10 t tt ttt
-wait for 0.5
+wait for 1.1
 set rrd 11 t tt ttt
-wait for 0.5
+wait for 1.1
 set rrd 12 t tt ttt
 list rrd t tt ttt
 block:
